// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Paidout Web 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "display": "flex",
      "marginBottom": "0rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "0rem",
      "position": "relative",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "marginTop": "2.8rem",
        "position": "relative",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "display": "flex",
          "fontFamily": "HelveticaNeue",
          "fontSize": "1.225rem",
          "lineHeight": "1.6333333333333333rem",
          "position": "relative",
        }
      }
    >
      FEBRUARY
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "space-between",
        "backgroundColor": "rgba(248,248,248,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "space-between",
        "marginTop": "1.4rem",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
        "msFlexPositive": 1,
        "paddingBottom": "1.05rem",
        "paddingLeft": "1.4rem",
        "paddingRight": "1.4rem",
        "paddingTop": "1.05rem",
        "position": "relative",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "display": "flex",
          "flexDirection": "row",
          "msFlexDirection": "row",
          "position": "relative",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        mr={4}
        style={
          Object {
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "marginRight": "2.8rem",
            "position": "relative",
          }
        }
      >
        Feb 5, 2019
      </div>
      <div
        c="#999999"
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "WebkitTextDecorationColor": "rgba(153,153,153,1.00)",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "position": "relative",
            "textDecorationColor": "rgba(153,153,153,1.00)",
          }
        }
      >
        paidout
      </div>
    </div>
    <div
      c="#7ED321"
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
          "color": "rgba(126,211,33,1.00)",
          "display": "flex",
          "fontFamily": "HelveticaNeue",
          "fontSize": "1.225rem",
          "lineHeight": "1.6333333333333333rem",
          "position": "relative",
          "textDecorationColor": "rgba(126,211,33,1.00)",
        }
      }
    >
      + 
      10
       REL
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(221,221,221,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "display": "flex",
        "position": "relative",
      }
    }
  >
    Preview
  </div>
</div>
`;

exports[`Snapshot Pending Web 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "display": "flex",
      "marginBottom": "0rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "0rem",
      "position": "relative",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "marginTop": "2.8rem",
        "position": "relative",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "display": "flex",
          "fontFamily": "HelveticaNeue",
          "fontSize": "1.225rem",
          "lineHeight": "1.6333333333333333rem",
          "position": "relative",
        }
      }
    >
      FEBRUARY
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "space-between",
        "backgroundColor": "rgba(248,248,248,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "space-between",
        "marginTop": "1.4rem",
        "msFlexDirection": "row",
        "msFlexPack": "justify",
        "msFlexPositive": 1,
        "paddingBottom": "1.05rem",
        "paddingLeft": "1.4rem",
        "paddingRight": "1.4rem",
        "paddingTop": "1.05rem",
        "position": "relative",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "display": "flex",
          "flexDirection": "row",
          "msFlexDirection": "row",
          "position": "relative",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        mr={4}
        style={
          Object {
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "marginRight": "2.8rem",
            "position": "relative",
          }
        }
      />
      <div
        c="#999999"
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "WebkitTextDecorationColor": "rgba(153,153,153,1.00)",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "position": "relative",
            "textDecorationColor": "rgba(153,153,153,1.00)",
          }
        }
      >
        pending
      </div>
    </div>
    <div
      c="#7ED321"
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
          "color": "rgba(126,211,33,1.00)",
          "display": "flex",
          "fontFamily": "HelveticaNeue",
          "fontSize": "1.225rem",
          "lineHeight": "1.6333333333333333rem",
          "position": "relative",
          "textDecorationColor": "rgba(126,211,33,1.00)",
        }
      }
    >
      + 
      10
       REL
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(221,221,221,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "display": "flex",
        "position": "relative",
      }
    }
  >
    Preview
  </div>
</div>
`;
